Fix hamburger menu (overflow body)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -414,6 +414,10 @@ span {
   margin-top: 10px;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 @media (max-width: 992px) {
   .video-container {
     margin: 2px 2px;
